@@ -1,3 +1,10 @@
+2006-06-20  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* openat.c (openat): Use ?:, not if, to work around GCC bug 4210
+	<http://gcc.gnu.org/bugzilla/show_bug.cgi?id=4210>.
+	Problem reported by Denis Excoffier in
+	<http://lists.gnu.org/archive/html/bug-tar/2006-06/msg00023.html>.
+
 2006-06-19  Jim Meyering  <jim@meyering.net>
 
 	Apply this change from gnulib:
